fix footer alignment

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -331,6 +331,7 @@ thead {
 	font-size: 0.5rem;
     margin-top: 8rem !important;
     margin-bottom: 8rem !important;
+    max-width: 90%;
 }
 
 /*CALENDAR*/
